# raytracing.rs

./: CLAUDE.md  Cargo.toml  README.md  REAME.md  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  comment.yml  rust.yml
benches/: bench_raytracing.rs
src/: aabb.rs  args.rs  asset.rs  brdf.rs  color.rs  config.rs  counter.rs  error.rs  lib.rs  main.rs  model.rs  ray.rs  renderer.rs  sampler.rs  world.rs
src/accelerator/: bvh.rs  mod.rs
src/brdf/: glossy_specular.rs  lambertian.rs  mod.rs  perfect_specular.rs
src/camera/: mod.rs  pinhole.rs  setting.rs  simple.rs  thin_lens.rs
src/geometric_object/: bvh_node.rs  mod.rs  sphere.rs  triangle.rs
src/light/: ambient.rs  ambient_occuluder.rs  area.rs  directional.rs  mod.rs  point.rs
src/material/: emissive.rs  matte.rs  mod.rs  phong.rs  reflective.rs
src/scene/: cornell_box.rs  factory.rs  mod.rs
