[package]
name = "raytracing"
version = "0.1.0"
authors = ["Boshen"]
edition = "2021"

[dependencies]
num-integer = "0.1.46"
image = "0.24.9"
nalgebra = "0.32.6"
rayon = "1.10.0"
rand = "0.8.5"
tobj = "3.2.5"
clap = { version = "3.2.25", features = ["derive"] }

[dev-dependencies]
# use `cargo criterion` with `cargo install cargo-criterion`
criterion = {version = "0.4", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = true

[[bench]]
name = "bench_raytracing"
harness = false
