[package]
name = "raytracing"
version = "0.1.0"
authors = ["Boshen"]
edition = "2021"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
allow_attributes = "warn"
# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating by accident.
clone_on_ref_ptr = "warn"
# These two are mutually exclusive, I like `mod.rs` files for better fuzzy searches on module entries.
self_named_module_files = "warn" # "-Wclippy::mod_module_files"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
impl_trait_in_params = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"

many_single_char_names = "allow"

[dependencies]
num-integer = "0.1.46"
image = "0.24.9"
nalgebra = "0.32.6"
rayon = "1.10.0"
rand = "0.8.5"
tobj = "3.2.5"
clap = { version = "3.2.25", features = ["derive"] }

[dev-dependencies]
# use `cargo criterion` with `cargo install cargo-criterion`
criterion = {version = "0.4", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = true

[[bench]]
name = "bench_raytracing"
harness = false
